live button added under product image

--- a/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Nop.Plugin.Misc.ProductLiveButton.csproj
+++ b/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Nop.Plugin.Misc.ProductLiveButton.csproj
@@ -35,7 +35,7 @@
     <Content Include="Views\Configure.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Views\PublicInfo.cshtml">
+    <Content Include="Views\PublicInfoProductPage.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Views\_ViewImports.cshtml">
