live preview in new page done

--- a/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Nop.Plugin.Misc.ProductLiveButton.csproj
+++ b/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Nop.Plugin.Misc.ProductLiveButton.csproj
@@ -54,6 +54,9 @@
     <None Update="Views\CreateOrUpdate.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Views\PreviewDemo.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <!-- This target execute after "Build" target -->
