automapper list map done

--- a/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Nop.Plugin.Misc.ProductLiveButton.csproj
+++ b/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Nop.Plugin.Misc.ProductLiveButton.csproj
@@ -57,6 +57,9 @@
     <None Update="Views\PreviewDemo.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Views\PublicInfoHomePage.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <!-- This target execute after "Build" target -->
