mail sending successfully

--- a/src/Plugins/Nop.Plugin.Misc.NopHunter.VendorRegistration/Nop.Plugin.Misc.NopHunter.VendorRegistration.csproj
+++ b/src/Plugins/Nop.Plugin.Misc.NopHunter.VendorRegistration/Nop.Plugin.Misc.NopHunter.VendorRegistration.csproj
@@ -48,6 +48,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Content\Scripts\registration-page.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Views\RegistrationPageView.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
