vendor list loading wiht disable button

--- a/src/Plugins/Nop.Plugin.Misc.NopHunter.VendorRegistration/Nop.Plugin.Misc.NopHunter.VendorRegistration.csproj
+++ b/src/Plugins/Nop.Plugin.Misc.NopHunter.VendorRegistration/Nop.Plugin.Misc.NopHunter.VendorRegistration.csproj
@@ -19,9 +19,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Areas\Admin\Views\Shared\TableCustom.cshtml" />
+    <None Remove="Areas\Admin\Views\Shared\_Table.DefinitionCustom.cshtml" />
+    <None Remove="Areas\Admin\Views\_ViewImports.cshtml" />
     <None Remove="logo.jpg" />
     <None Remove="plugin.json" />
     <None Remove="Views\Configure.cshtml" />
+    <None Remove="Views\TableCustom.cshtml" />
     <None Remove="Views\Vendor\ApplyVendor.cshtml" />
     <None Remove="Views\Vendor\Info.cshtml" />
     <None Remove="Views\Vendor\_CustomerForm.cshtml" />
@@ -31,6 +35,21 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Areas\Admin\Views\Shared\TableCustom.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Areas\Admin\Views\Shared\_Table.DefinitionCustom.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Areas\Admin\Views\_ViewImports.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="logo.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -39,6 +58,11 @@
     </Content>
     <Content Include="Views\Configure.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\TableCustom.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
     <Content Include="Views\Vendor\ApplyVendor.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
@@ -84,6 +108,10 @@
     <None Update="Views\RegistrationPageView.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\Admin\" />
   </ItemGroup>
 
   <!-- This target execute after "Build" target -->
