--- a/src/Plugins/Nop.Plugin.Misc.NopHunter.LiveChat/Nop.Plugin.Misc.NopHunter.LiveChat.csproj
+++ b/src/Plugins/Nop.Plugin.Misc.NopHunter.LiveChat/Nop.Plugin.Misc.NopHunter.LiveChat.csproj
@@ -45,6 +45,12 @@
     <ClearPluginAssemblies Include="$(MSBuildProjectDirectory)\..\..\Build\ClearPluginAssemblies.proj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Views\Script.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <!-- This target execute after "Build" target -->
   <Target Name="NopTarget" AfterTargets="Build">
     <!-- Delete unnecessary libraries from plugins path -->
